--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
       <input type="number" id="primer-numero" />
       <label for="segundo-numero">Segundo número:</label>
       <input type="number" id="segundo-numero" />
-      <input type="submit" value="Sumar" />
+      <button id="sumar-btn">Sumar</button>
+      <button id="multiplicar-btn">Multiplicar</button>
     </form>
     <div id="resultado-div"></div>
 
